[package]
name = "quack"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Generate Conventional Commit messages from a git diff using llama.cpp (via llama_cpp Rust bindings)."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
llama_cpp = { version = "0.3.2", features = ["metal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
